fix password requests when using GnuPG 1.x

This all works well with GnuPG 2.x because that is using pinentry. Things were
broken for older versions that require direct password supply.

BUG:248161
FIXED-IN:4.8.2